[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/MADE TOMMY Regular_PERSONAL USE.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/header.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[node name="Header" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1000.0
margin_bottom = 100.0
color = Color( 1, 0.113725, 0, 1 )

[node name="TitleLabel" type="Label" parent="Background"]
margin_left = 4.0
margin_top = 14.0
margin_right = 1004.0
margin_bottom = 84.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Title"
align = 1

[node name="DayLabel" type="Label" parent="Background"]
margin_left = 22.0
margin_top = 31.0
margin_right = 78.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
text = "Day: 0"

[node name="MoneyLabel" type="Label" parent="Background"]
anchor_right = 0.026
anchor_bottom = 0.44
margin_left = 688.0
margin_top = 56.0
margin_right = 962.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "$100"
align = 2

[node name="SubscriberLabel" type="Label" parent="Background"]
anchor_right = 0.026
anchor_bottom = 0.44
margin_left = 688.0
margin_top = 17.0
margin_right = 962.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
